리팩토링중

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -46,10 +46,6 @@
                 <input type="text" id="sessionTitleInput" class="form-control rounded" placeholder="세션 제목을 입력하세요">
                 <textarea id="sessionexplain" class="form-control rounded" placeholder="세션 설명을 입력하세요"
                     rows="4"></textarea>
-                <div class="radio-group">
-                    <label><input type="radio" name="chk_info" value="temporary" checked>임시</label>
-                    <label><input type="radio" name="chk_info" value="permanent">영구</label>
-                </div>
                 <input id="sessionPw" type="text" class="form-control rounded" placeholder="세션 비밀번호">
                 <button id="submitSessionBtn" class="create-session rounded">생성하기</button>
             </div>
@@ -69,7 +65,7 @@
             <p>github @ <a href="https://www.github.com/dasfaf4464/JAMES" target="_blank">dasfaf4464/JAMES</a></p>
         </div>
     </footer>
-    <script src="../static/js/login.js"></script>
+    <script src="../static/js/index.js"></script>
 </body>
 
 </html>
