--- a/web/app/templates/profile.html
+++ b/web/app/templates/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/history-style.css">
+    <link rel="stylesheet" href="../static/css/profile-style.css">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
             <p>경기대학교 team JAMES</p>
             <p>github @ <a href="https://www.github.com/dasfaf4464/JAMES" target="_blank">dasfaf4464/JAMES</a></p>
         </div>
-        <script src="../static/js/history.js"></script>
+        <script src="../static/js/profile.js"></script>
     </footer>
 </body>
 
