--- a/web/app/templates/profile.html
+++ b/web/app/templates/profile.html
@@ -20,19 +20,7 @@
         <div id="check-myquestion"> 나의 질문 보기 <button id="layout-button">레이아웃 선택</button></div>
         <div class="myQuestionContainer">
             <ul>
-                <li>질문 답변 개수 : </li>
-                <li>질문1</li>
-                <li>질문2</li>
-                <li>질문3</li>
-                <li>질문4</li>
-                <li>질문1</li>
-                <li>질문2</li>
-                <li>질문3</li>
-                <li>질문4</li>
-                <li>질문1</li>
-                <li>질문2</li>
-                <li>질문3</li>
-                <li>질문4</li>
+                <!-- 질문 리스트가 여기 동적으로 들어갑니다 -->
             </ul>
         </div>
     </main>
