--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -26,30 +26,7 @@
         <div class="session-list">
             <button id="toggle-panel-button">☰</button>
             <ul class="session-group">
-                <li class="session-group-item">
-                    <p class="session-title">세션 제목</p>
-                    <p class="session-info">현재 입장 인원: <br>질문 수:</p>
-                    <p class="session-period">임시</p>
-                    <img class="session-icon" src="../static/image/computer.svg">
-                </li>
-                <li class="session-group-item">
-                    <p class="session-title">세션 제목</p>
-                    <p class="session-info">현재 입장 인원: <br>질문 수:</p>
-                    <p class="session-period">영구</p>
-                    <img class="session-icon" src="../static/image/computer.svg">
-                </li>
-                <li class="session-group-item">
-                    <p class="session-title">세션 제목</p>
-                    <p class="session-info">현재 입장 인원: <br>질문 수:</p>
-                    <p class="session-period">임시</p>
-                    <img class="session-icon" src="../static/image/computer.svg">
-                </li>
-                <li class="session-group-item">
-                    <p class="session-title">세션 제목</p>
-                    <p class="session-info">현재 입장 인원: <br>질문 수:</p>
-                    <p class="session-period">영구</p>
-                    <img class="session-icon" src="../static/image/computer.svg">
-                </li>
+
             </ul>
             <div class="page-num">
                 <button id="frontB">◀</button>
@@ -73,7 +50,8 @@
                 <button id="create-session-button">세션 만들기</button>
                 <label>새로운 세션에 참여하세요</label>
                 <button id="into-session-button">코드로 세션 입장</button>
-                <input id="session-code" class="form-control rounded" type="text" maxlength="14" required placeholder="세션 코드 입력">
+                <input id="session-code" class="form-control rounded" type="text" maxlength="14" required
+                    placeholder="세션 코드 입력">
             </form>
         </div>
         <div id="sessionModal" class="modal">
@@ -81,10 +59,11 @@
                 <span class="close-button" id="closeModal">&times;</span>
                 <h2>새 세션 만들기</h2>
                 <input type="text" id="sessionTitleInput" class="form-control rounded" placeholder="세션 제목을 입력하세요">
-                <textarea id="sessionexplain" class="form-control rounded" placeholder="세션 설명을 입력하세요" rows="4"></textarea>
+                <textarea id="sessionexplain" class="form-control rounded" placeholder="세션 설명을 입력하세요"
+                    rows="4"></textarea>
                 <div class="radio-group">
-                <label><input type="radio" name="chk_info" value="temporary" checked>임시</label>
-                <label><input type="radio" name="chk_info" value="permanent">영구</label>
+                    <label><input type="radio" name="chk_info" value="temporary" checked>임시</label>
+                    <label><input type="radio" name="chk_info" value="permanent">영구</label>
                 </div>
                 <input id="sessionPw" type="text" class="form-control rounded" placeholder="세션 비밀번호">
                 <button id="submitSessionBtn" class="create-session rounded">생성하기</button>
