엉성한데 돌아가네 시팔거 , css만 수정하면 끝

--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -62,7 +62,7 @@
             </form>
         </div>
         <div class="right-panel">
-            <div class="cartegory-list-panel">
+            <div class="cartegory-list-panel" id="category-list-panel">
             </div>
             <div class="LLM-list-panel">
                 <!--
