--- a/web/app/templates/home.html
+++ b/web/app/templates/home.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansita&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
-
+    <link rel="icon" href="../static/image/logo.png" type="image/png" />
     <title>UnMute</title>
 </head>
 
