--- a/web/app/templates/profile.html
+++ b/web/app/templates/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/profile-style.css">
+    <link rel="icon" href="../static/image/logo.png" type="image/png" />
 </head>
 
 <body>
