--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -50,10 +50,10 @@
             <form id="chatForm" class="chat-form" onsubmit="return false">
                 <div class="questionBar">
                     <input type="text" id="originaltext" class="form-control rounded-pill" placeholder="질문을 입력하세요">
-                    <button class=questionButton id="questionButton" type="button">submit</button>
+                    <button class=questionButton id="questionButton" type="button">refine</button>
                 </div>
                 <div class="summary-wrapper">
-                    <button class="summaryButton">summary</button>
+                    <button class="summaryButton">select</button>
                 </div>
                 <!--
                 <button>입력 옵션 선택 버튼들</button>
