--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -14,6 +14,7 @@
         integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/session-style.css">
+    <link rel="icon" href="../static/image/logo.png" type="image/png" />
 </head>
 
 <body>
