--- a/web/app/templates/session.html
+++ b/web/app/templates/session.html
@@ -31,7 +31,7 @@
     <div id="passwordModal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
             <h2>세션 비밀번호 입력</h2>
-            <input type="password" id="sessionPassword" placeholder="비밀번호 입력" />
+            <input type="password" id="sessionPassword" placeholder="비밀번호 입력" class="form-control rounded" />
             <button id="enterSessionBtn">입장</button>
             <p id="passwordError" style="color: red; display: none;">비밀번호가 틀렸습니다.</p>
         </div>
